# orbita-desktop

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: orbita.json  titlebar.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
