[package]
name = "orbita-desktop"
version = "0.4.0"
edition = "2021"
description = "Application desktop Orbita (Epicube Gestion) — coquille native qui charge gestion.epicube.ch."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = false
strip = true
